fixed navbar margin on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -299,6 +299,10 @@ footer p {
         justify-content: center;
     }
 
+    .navButtons {
+        margin-top: 10px;
+    }
+
     .portfolio {
         margin: auto;
         height: fit-content;
